networkpolicy/networkpolicy__basic_kafka_setup__minio__from__strimzi__ingress__ports__9000__nr39__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio--from--strimzi--ingress--ports--9000--nr39
  namespace: minio
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: strimzi
    ports:
    - protocol: TCP
      port: 9000
